Fix bug in ex5 notebook: missing function definition

--- a/05_autodiff_ex5.ipynb
+++ b/05_autodiff_ex5.ipynb
@@ -96,6 +96,13 @@
    },
    "outputs": [],
    "source": [
+    "def plot_life_satisfaction(X_train, y_train):\n",
+    "    plt.plot(X_train * 10000, y_train, \"bo\")\n",
+    "    plt.axis([0, 60000, 0, 10])\n",
+    "    plt.xlabel(\"GDP per capita ($)\")\n",
+    "    plt.ylabel(\"Life Satisfaction\")\n",
+    "    plt.grid()\n",
+    "\n",
     "def plot_life_satisfaction_with_linear_model(X_train, y_train, w, b):\n",
     "    plot_life_satisfaction(X_train, y_train)\n",
     "    plt.plot([0, 60000], [b, w[0][0] * (60000 / 10000) + b])"
@@ -111,7 +118,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "graph = tf.Graph()\n",
@@ -760,6 +769,15 @@
    "source": [
     "y_pred_val"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -778,7 +796,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
