deleted orig big ipynb, added instruction about GPU

--- a/11_convolutional_neural_networks_ex10.ipynb
+++ b/11_convolutional_neural_networks_ex10.ipynb
@@ -493,6 +493,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NB: The following cell will not run on the resources available for the course. If you are running locally, it is highly recommended to use a GPU."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
