--- a/07_tensorboard_ex6.ipynb
+++ b/07_tensorboard_ex6.ipynb
@@ -255,7 +255,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "filenames = [\"data/life_satisfaction.csv\"]\n",
@@ -778,7 +780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
